# korean-tools

./: AGENTS.md  README.md  pyproject.toml
src/: download.py  export.py  extract.py  parse.py  translate.py  whisper.py
