[project]
name = "korean-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faster-whisper>=1.2.1",
    "openai>=2.33.0",
    "rich>=15.0.0",
    "rich-click>=1.9.7",
    "webvtt-py>=0.5.1",
    "yt-dlp[curl-cffi,default]>=2026.3.17",
]
